pkg/ecl/y.output

0: shift/reduce conflict (shift 5, red'n 1) on error
state 0
	$accept : _block $end 
	block : _    (1)

	$end  reduce 1
	error  shift 5
	Y_OSESC  reduce 1
	D_D  reduce 1
	D_PEEK  reduce 1
	Y_IDENT  reduce 1
	Y_WHILE  reduce 1
	Y_IF  reduce 1
	Y_FOR  reduce 1
	Y_BREAK  reduce 1
	Y_NEXT  reduce 1
	Y_SWITCH  reduce 1
	Y_CASE  reduce 1
	Y_DEFAULT  reduce 1
	Y_RETURN  reduce 1
	Y_GOTO  reduce 1
	Y_PROCEDURE  shift 8
	Y_BEGIN  shift 9
	Y_BOOL  reduce 1
	Y_INT  reduce 1
	Y_REAL  reduce 1
	Y_STRING  reduce 1
	Y_FILE  reduce 1
	Y_STRUCT  reduce 1
	Y_GCUR  reduce 1
	Y_IMCUR  reduce 1
	Y_UKEY  reduce 1
	Y_PSET  reduce 1
	Y_IFERR  reduce 1
	Y_IFNOERR  reduce 1
	=  reduce 1
	.  shift 2
	~  reduce 1
	{  reduce 1
	;  reduce 1
	.  error

	block  goto 1
	script_params  goto 3
	script_body  goto 4
	proc_stmt  goto 6
	begin_stmt  goto 7

state 1
	$accept :  block_$end 
	block :  block_$$3 debug xstmt 
	$$3 : _    (3)

	$end  accept
	.  reduce 3

	$$3  goto 10

state 2
	block :  ._NL 

	Y_NEWLINE  shift 12
	.  error

	NL  goto 11

state 3
	block :  script_params_    (5)

	.  reduce 5


state 4
	block :  script_body_    (6)

	.  reduce 6


state 5
	block :  error_NL 

	Y_NEWLINE  shift 12
	.  error

	NL  goto 13

state 6
	script_params :  proc_stmt_var_decls begin_stmt 
	var_decls : _    (25)

	error  shift 19
	Y_NEWLINE  shift 12
	Y_BEGIN  reduce 25
	Y_BOOL  shift 23
	Y_INT  shift 31
	Y_REAL  shift 25
	Y_STRING  shift 24
	Y_FILE  shift 26
	Y_STRUCT  shift 32
	Y_GCUR  shift 27
	Y_IMCUR  shift 28
	Y_UKEY  shift 29
	Y_PSET  shift 30
	;  shift 21
	.  error

	NL  goto 20
	EOST  goto 17
	var_decls  goto 14
	var_decl_block  goto 15
	var_decl_line  goto 16
	var_decl_stmt  goto 18
	typedefs  goto 22

state 7
	script_body :  begin_stmt_$$15 s_list opnl end_stmt 
	$$15 : _    (15)

	.  reduce 15

	$$15  goto 33

state 8
	proc_stmt :  Y_PROCEDURE_$$17 param bparam_list EOST 
	$$17 : _    (17)

	.  reduce 17

	$$17  goto 34

state 9
	begin_stmt :  Y_BEGIN_NL 

	Y_NEWLINE  shift 12
	.  error

	NL  goto 35

state 10
	block :  block $$3_debug xstmt 
	debug : _    (8)

	D_D  shift 38
	D_PEEK  shift 39
	~  shift 40
	.  reduce 8

	debug  goto 36
	D_XXX  goto 37

state 11
	block :  . NL_    (2)

	.  reduce 2


state 12
	NL :  Y_NEWLINE_    (271)

	.  reduce 271


state 13
	block :  error NL_    (7)

	.  reduce 7


state 14
	script_params :  proc_stmt var_decls_begin_stmt 

	Y_BEGIN  shift 9
	.  error

	begin_stmt  goto 41

state 15
	var_decls :  var_decl_block_    (26)
	var_decl_block :  var_decl_block_var_decl_line 

	error  shift 19
	Y_NEWLINE  shift 12
	Y_BEGIN  reduce 26
	Y_BOOL  shift 23
	Y_INT  shift 31
	Y_REAL  shift 25
	Y_STRING  shift 24
	Y_FILE  shift 26
	Y_STRUCT  shift 32
	Y_GCUR  shift 27
	Y_IMCUR  shift 28
	Y_UKEY  shift 29
	Y_PSET  shift 30
	;  shift 21
	.  error

	NL  goto 20
	EOST  goto 17
	var_decl_line  goto 42
	var_decl_stmt  goto 18
	typedefs  goto 22

state 16
	var_decl_block :  var_decl_line_    (27)

	.  reduce 27


state 17
	var_decl_line :  EOST_    (29)

	.  reduce 29


state 18
	var_decl_line :  var_decl_stmt_    (30)

	.  reduce 30


state 19
	var_decl_line :  error_NL 

	Y_NEWLINE  shift 12
	.  error

	NL  goto 43

state 20
	EOST :  NL_    (262)

	.  reduce 262


state 21
	EOST :  ;_    (263)

	.  reduce 263


state 22
	var_decl_stmt :  typedefs_$$32 var_decl_list EOST 
	$$32 : _    (32)

	.  reduce 32

	$$32  goto 44

state 23
	typedefs :  Y_BOOL_    (34)

	.  reduce 34


state 24
	typedefs :  Y_STRING_    (35)

	.  reduce 35


state 25
	typedefs :  Y_REAL_    (36)

	.  reduce 36


state 26
	typedefs :  Y_FILE_    (37)

	.  reduce 37


state 27
	typedefs :  Y_GCUR_    (38)

	.  reduce 38


state 28
	typedefs :  Y_IMCUR_    (39)

	.  reduce 39


state 29
	typedefs :  Y_UKEY_    (40)

	.  reduce 40


state 30
	typedefs :  Y_PSET_    (41)

	.  reduce 41


state 31
	typedefs :  Y_INT_    (42)

	.  reduce 42


state 32
	typedefs :  Y_STRUCT_    (43)

	.  reduce 43


state 33
	script_body :  begin_stmt $$15_s_list opnl end_stmt 
	s_list : _    (150)

	.  reduce 150

	s_list  goto 45

state 34
	proc_stmt :  Y_PROCEDURE $$17_param bparam_list EOST 

	Y_IDENT  shift 47
	.  error

	param  goto 46

state 35
	begin_stmt :  Y_BEGIN NL_    (76)

	.  reduce 76


state 36
	block :  block $$3 debug_xstmt 
	$$240 : _    (240)

	error  shift 51
	Y_OSESC  reduce 240
	Y_IDENT  reduce 240
	Y_WHILE  reduce 240
	Y_IF  reduce 240
	Y_FOR  reduce 240
	Y_BREAK  reduce 240
	Y_NEXT  reduce 240
	Y_SWITCH  reduce 240
	Y_CASE  reduce 240
	Y_DEFAULT  reduce 240
	Y_RETURN  reduce 240
	Y_GOTO  reduce 240
	Y_BOOL  shift 23
	Y_INT  shift 31
	Y_REAL  shift 25
	Y_STRING  shift 24
	Y_FILE  shift 26
	Y_STRUCT  shift 32
	Y_GCUR  shift 27
	Y_IMCUR  shift 28
	Y_UKEY  shift 29
	Y_PSET  shift 30
	Y_IFERR  reduce 240
	Y_IFNOERR  reduce 240
	=  reduce 240
	{  reduce 240
	;  reduce 240
	.  error

	xstmt  goto 48
	var_decl_stmt  goto 50
	typedefs  goto 22
	$$240  goto 49

state 37
	debug :  D_XXX_EOST $$9 debug 

	Y_NEWLINE  shift 12
	;  shift 21
	.  error

	NL  goto 20
	EOST  goto 52

state 38
	D_XXX :  D_D_    (11)

	.  reduce 11


state 39
	D_XXX :  D_PEEK_Y_CONSTANT 

	Y_CONSTANT  shift 53
	.  error


state 40
	D_XXX :  ~_    (13)

	.  reduce 13


state 41
	script_params :  proc_stmt var_decls begin_stmt_    (14)

	.  reduce 14


state 42
	var_decl_block :  var_decl_block var_decl_line_    (28)

	.  reduce 28


state 43
	var_decl_line :  error NL_    (31)

	.  reduce 31


state 44
	var_decl_stmt :  typedefs $$32_var_decl_list EOST 

	Y_IDENT  shift 47
	*  shift 60
	.  error

	param  goto 59
	var_decl_list  goto 54
	var_decl_plus  goto 55
	var_decl  goto 56
	var_def  goto 57
	var_name  goto 58

state 45
	script_body :  begin_stmt $$15 s_list_opnl end_stmt 
	s_list :  s_list_opnl xstmt 
	opnl : _    (247)

	Y_NEWLINE  shift 12
	.  reduce 247

	NL  goto 62
	opnl  goto 61

state 46
	proc_stmt :  Y_PROCEDURE $$17 param_bparam_list EOST 
	bparam_list : _    (19)

	(  shift 65
	.  reduce 19

	bparam_list  goto 63
	LP  goto 64

state 47
	param :  Y_IDENT_    (260)

	.  reduce 260


state 48
	block :  block $$3 debug xstmt_    (4)

	.  reduce 4


state 49
	xstmt :  $$240_stmt 

	Y_OSESC  shift 93
	Y_IDENT  shift 105
	Y_WHILE  shift 96
	Y_IF  shift 111
	Y_FOR  shift 97
	Y_BREAK  shift 102
	Y_NEXT  shift 101
	Y_SWITCH  shift 98
	Y_CASE  shift 99
	Y_DEFAULT  shift 100
	Y_RETURN  shift 104
	Y_GOTO  shift 103
	Y_IFERR  shift 113
	Y_IFNOERR  shift 114
	=  shift 110
	{  shift 107
	;  shift 106
	.  error

	param  goto 108
	ref  goto 90
	stmt  goto 66
	c_stmt  goto 67
	assign  goto 68
	cmdlist  goto 69
	immed  goto 70
	inspect  goto 71
	osesc  goto 72
	popstk  goto 73
	if  goto 74
	ifelse  goto 75
	iferr  goto 76
	iferr_else  goto 77
	while  goto 78
	for  goto 79
	switch  goto 80
	case  goto 81
	default  goto 82
	next  goto 83
	break  goto 84
	goto  goto 85
	return  goto 86
	label_stmt  goto 87
	nullstmt  goto 88
	c_blk  goto 89
	equals  goto 92
	command  goto 91
	tasknam  goto 109
	iferr_stat  goto 95
	iferr_tok  goto 112
	if_stat  goto 94

state 50
	xstmt :  var_decl_stmt_    (242)

	.  reduce 242


state 51
	xstmt :  error_NL 

	Y_NEWLINE  shift 12
	.  error

	NL  goto 115

state 52
	debug :  D_XXX EOST_$$9 debug 
	$$9 : _    (9)

	.  reduce 9

	$$9  goto 116

state 53
	D_XXX :  D_PEEK Y_CONSTANT_    (12)

	.  reduce 12


state 54
	var_decl_stmt :  typedefs $$32 var_decl_list_EOST 

	Y_NEWLINE  shift 12
	;  shift 21
	.  error

	NL  goto 20
	EOST  goto 117

state 55
	var_decl_list :  var_decl_plus_    (44)
	var_decl_list :  var_decl_plus_DELIM var_decl_list 

	,  shift 119
	.  reduce 44

	DELIM  goto 118

state 56
	var_decl_plus :  var_decl_    (46)
	var_decl_plus :  var_decl_{ options_list ; } 

	{  shift 120
	.  reduce 46


state 57
	var_decl :  var_def_    (48)
	var_decl :  var_def_= $$49 init_list 

	=  shift 121
	.  reduce 48


state 58
	var_def :  var_name_    (51)
	var_def :  var_name_$$52 [ init_index_list ] 
	$$52 : _    (52)

	[  reduce 52
	.  reduce 51

	$$52  goto 122

state 59
	var_name :  param_    (54)

	.  reduce 54


state 60
	var_name :  *_param 

	Y_IDENT  shift 47
	.  error

	param  goto 123

state 61
	script_body :  begin_stmt $$15 s_list opnl_end_stmt 
	s_list :  s_list opnl_xstmt 
	$$240 : _    (240)

	error  shift 51
	Y_OSESC  reduce 240
	Y_IDENT  reduce 240
	Y_WHILE  reduce 240
	Y_IF  reduce 240
	Y_FOR  reduce 240
	Y_BREAK  reduce 240
	Y_NEXT  reduce 240
	Y_SWITCH  reduce 240
	Y_CASE  reduce 240
	Y_DEFAULT  reduce 240
	Y_RETURN  reduce 240
	Y_GOTO  reduce 240
	Y_END  shift 126
	Y_BOOL  shift 23
	Y_INT  shift 31
	Y_REAL  shift 25
	Y_STRING  shift 24
	Y_FILE  shift 26
	Y_STRUCT  shift 32
	Y_GCUR  shift 27
	Y_IMCUR  shift 28
	Y_UKEY  shift 29
	Y_PSET  shift 30
	Y_IFERR  reduce 240
	Y_IFNOERR  reduce 240
	=  reduce 240
	{  reduce 240
	;  reduce 240
	.  error

	xstmt  goto 125
	end_stmt  goto 124
	var_decl_stmt  goto 50
	typedefs  goto 22
	$$240  goto 49

state 62
	opnl :  NL_    (248)

	.  reduce 248


state 63
	proc_stmt :  Y_PROCEDURE $$17 param bparam_list_EOST 

	Y_NEWLINE  shift 12
	;  shift 21
	.  error

	NL  goto 20
	EOST  goto 127

state 64
	bparam_list :  LP_param_list RP 
	param_list : _    (21)

	Y_IDENT  shift 47
	.  reduce 21

	param  goto 130
	param_list  goto 128
	xparam_list  goto 129

state 65
	LP :  (_    (269)

	.  reduce 269


state 66
	xstmt :  $$240 stmt_    (241)

	.  reduce 241


state 67
	stmt :  c_stmt_    (123)

	.  reduce 123


state 68
	stmt :  assign_EOST 

	Y_NEWLINE  shift 12
	;  shift 21
	.  error

	NL  goto 20
	EOST  goto 131

state 69
	stmt :  cmdlist_EOST 

	Y_NEWLINE  shift 12
	;  shift 21
	.  error

	NL  goto 20
	EOST  goto 132

state 70
	stmt :  immed_EOST 

	Y_NEWLINE  shift 12
	;  shift 21
	.  error

	NL  goto 20
	EOST  goto 133

state 71
	stmt :  inspect_EOST 

	Y_NEWLINE  shift 12
	;  shift 21
	.  error

	NL  goto 20
	EOST  goto 134

state 72
	stmt :  osesc_EOST 

	Y_NEWLINE  shift 12
	;  shift 21
	.  error

	NL  goto 20
	EOST  goto 135

state 73
	stmt :  popstk_EOST 

	Y_NEWLINE  shift 12
	;  shift 21
	.  error

	NL  goto 20
	EOST  goto 136

state 74
	stmt :  if_    (130)

	.  reduce 130


state 75
	stmt :  ifelse_    (131)

	.  reduce 131


state 76
	stmt :  iferr_    (132)

	.  reduce 132


state 77
	stmt :  iferr_else_    (133)

	.  reduce 133


state 78
	stmt :  while_    (134)

	.  reduce 134


state 79
	stmt :  for_    (135)

	.  reduce 135


state 80
	stmt :  switch_    (136)

	.  reduce 136


state 81
	stmt :  case_    (137)

	.  reduce 137


state 82
	stmt :  default_    (138)

	.  reduce 138


state 83
	stmt :  next_EOST 

	Y_NEWLINE  shift 12
	;  shift 21
	.  error

	NL  goto 20
	EOST  goto 137

state 84
	stmt :  break_EOST 

	Y_NEWLINE  shift 12
	;  shift 21
	.  error

	NL  goto 20
	EOST  goto 138

state 85
	stmt :  goto_EOST 

	Y_NEWLINE  shift 12
	;  shift 21
	.  error

	NL  goto 20
	EOST  goto 139

state 86
	stmt :  return_EOST 

	Y_NEWLINE  shift 12
	;  shift 21
	.  error

	NL  goto 20
	EOST  goto 140

state 87
	stmt :  label_stmt_    (143)

	.  reduce 143


state 88
	stmt :  nullstmt_    (144)

	.  reduce 144


89: shift/reduce conflict (shift 12, red'n 145) on Y_NEWLINE
state 89
	c_stmt :  c_blk_    (145)
	c_stmt :  c_blk_NL 

	Y_NEWLINE  shift 12
	.  reduce 145

	NL  goto 141

state 90
	assign :  ref_equals expr0 
	assign :  ref_equals ref 
	assign :  ref_$$154 assign_oper expr 
	inspect :  ref_equals 
	$$154 : _    (154)

	=  shift 110
	.  reduce 154

	equals  goto 142
	$$154  goto 143

state 91
	cmdlist :  command_$$162 cmdpipe 
	$$162 : _    (162)

	.  reduce 162

	$$162  goto 144

state 92
	immed :  equals_expr0 
	immed :  equals_ref 
	popstk :  equals_    (196)

	Y_SCAN  shift 157
	Y_SCANF  shift 158
	Y_FSCAN  shift 159
	Y_FSCANF  shift 160
	Y_CONSTANT  shift 148
	Y_IDENT  shift 162
	Y_INT  shift 164
	Y_REAL  shift 165
	Y_GCUR  shift 149
	Y_IMCUR  shift 150
	Y_UKEY  shift 151
	Y_PSET  shift 152
	-  shift 156
	YOP_NOT  shift 155
	(  shift 65
	.  reduce 196

	param  goto 108
	LP  goto 153
	expr  goto 154
	expr0  goto 145
	ref  goto 146
	expr1  goto 147
	intrinsx  goto 161
	intrins  goto 163

state 93
	osesc :  Y_OSESC_    (195)

	.  reduce 195


94: shift/reduce conflict (shift 166, red'n 207) on Y_ELSE
state 94
	if :  if_stat_    (207)
	ifelse :  if_stat_Y_ELSE $$210 opnl xstmt 

	Y_ELSE  shift 166
	.  reduce 207


95: shift/reduce conflict (shift 167, red'n 197) on Y_ELSE
state 95
	iferr :  iferr_stat_    (197)
	iferr_else :  iferr_stat_Y_ELSE $$201 opnl xstmt 

	Y_ELSE  shift 167
	.  reduce 197


state 96
	while :  Y_WHILE_LP $$212 expr RP $$213 opnl xstmt 

	(  shift 65
	.  error

	LP  goto 168

state 97
	for :  Y_FOR_LP opnl xassign ; opnl $$215 xexpr ; opnl $$216 xassign RP opnl $$217 stmt 

	(  shift 65
	.  error

	LP  goto 169

state 98
	switch :  Y_SWITCH_opnl LP opnl expr opnl RP opnl $$223 xstmt 
	opnl : _    (247)

	Y_NEWLINE  shift 12
	.  reduce 247

	NL  goto 62
	opnl  goto 170

state 99
	case :  Y_CASE_$$225 const_expr_list : opnl $$226 xstmt 
	$$225 : _    (225)

	.  reduce 225

	$$225  goto 171

state 100
	default :  Y_DEFAULT_: opnl $$228 xstmt 

	:  shift 172
	.  error


state 101
	next :  Y_NEXT_    (230)

	.  reduce 230


state 102
	break :  Y_BREAK_    (231)

	.  reduce 231


state 103
	goto :  Y_GOTO_Y_IDENT 

	Y_IDENT  shift 173
	.  error


state 104
	return :  Y_RETURN_    (232)
	return :  Y_RETURN_expr 

	Y_SCAN  shift 157
	Y_SCANF  shift 158
	Y_FSCAN  shift 159
	Y_FSCANF  shift 160
	Y_CONSTANT  shift 148
	Y_IDENT  shift 162
	Y_INT  shift 164
	Y_REAL  shift 165
	Y_GCUR  shift 149
	Y_IMCUR  shift 150
	Y_UKEY  shift 151
	Y_PSET  shift 152
	-  shift 156
	YOP_NOT  shift 155
	(  shift 65
	.  reduce 232

	param  goto 108
	LP  goto 153
	expr  goto 174
	expr0  goto 175
	ref  goto 176
	expr1  goto 147
	intrinsx  goto 161
	intrins  goto 163

state 105
	label_stmt :  Y_IDENT_: opnl $$235 xstmt 
	param :  Y_IDENT_    (260)
	tasknam :  Y_IDENT_    (261)

	=  reduce 260
	YOP_AOADD  reduce 260
	YOP_AOSUB  reduce 260
	YOP_AOMUL  reduce 260
	YOP_AODIV  reduce 260
	YOP_AOCAT  reduce 260
	[  reduce 260
	:  shift 177
	.  reduce 261


106: shift/reduce conflict (shift 12, red'n 238) on Y_NEWLINE
state 106
	nullstmt :  ;_    (238)
	nullstmt :  ;_NL 

	Y_NEWLINE  shift 12
	.  reduce 238

	NL  goto 178

state 107
	c_blk :  {_$$147 s_list opnl $$148 } 
	$$147 : _    (147)

	.  reduce 147

	$$147  goto 179

state 108
	ref :  param_    (249)
	ref :  param_$$250 [ index_list ] 
	$$250 : _    (250)

	[  reduce 250
	.  reduce 249

	$$250  goto 180

state 109
	command :  tasknam_$$169 BARG $$170 args EARG 
	$$169 : _    (169)

	.  reduce 169

	$$169  goto 181

state 110
	equals :  =_    (156)

	.  reduce 156


state 111
	if_stat :  Y_IF_LP expr RP $$208 opnl xstmt 

	(  shift 65
	.  error

	LP  goto 182

state 112
	iferr_stat :  iferr_tok_$$198 c_blk $$199 op_then opnl xstmt 
	$$198 : _    (198)

	.  reduce 198

	$$198  goto 183

state 113
	iferr_tok :  Y_IFERR_    (203)

	.  reduce 203


state 114
	iferr_tok :  Y_IFNOERR_    (204)

	.  reduce 204


state 115
	xstmt :  error NL_    (243)

	.  reduce 243


state 116
	debug :  D_XXX EOST $$9_debug 
	debug : _    (8)

	D_D  shift 38
	D_PEEK  shift 39
	~  shift 40
	.  reduce 8

	debug  goto 184
	D_XXX  goto 37

state 117
	var_decl_stmt :  typedefs $$32 var_decl_list EOST_    (33)

	.  reduce 33


state 118
	var_decl_list :  var_decl_plus DELIM_var_decl_list 

	Y_IDENT  shift 47
	*  shift 60
	.  error

	param  goto 59
	var_decl_list  goto 185
	var_decl_plus  goto 55
	var_decl  goto 56
	var_def  goto 57
	var_name  goto 58

state 119
	DELIM :  ,_    (264)

	.  reduce 264


state 120
	var_decl_plus :  var_decl {_options_list ; } 

	Y_CONSTANT  shift 192
	Y_IDENT  shift 193
	+  shift 196
	-  shift 197
	.  error

	options_list  goto 186
	init_list  goto 187
	const  goto 191
	init_elem  goto 189
	number  goto 194
	sign  goto 195
	options  goto 188
	option  goto 190

state 121
	var_decl :  var_def =_$$49 init_list 
	$$49 : _    (49)

	.  reduce 49

	$$49  goto 198

state 122
	var_def :  var_name $$52_[ init_index_list ] 

	[  shift 199
	.  error


state 123
	var_name :  * param_    (55)

	.  reduce 55


state 124
	script_body :  begin_stmt $$15 s_list opnl end_stmt_    (16)

	.  reduce 16


state 125
	s_list :  s_list opnl xstmt_    (151)

	.  reduce 151


state 126
	end_stmt :  Y_END_NL 

	Y_NEWLINE  shift 12
	.  error

	NL  goto 200

state 127
	proc_stmt :  Y_PROCEDURE $$17 param bparam_list EOST_    (18)

	.  reduce 18


state 128
	bparam_list :  LP param_list_RP 

	)  shift 202
	.  error

	RP  goto 201

state 129
	param_list :  xparam_list_    (22)
	xparam_list :  xparam_list_DELIM param 

	,  shift 119
	.  reduce 22

	DELIM  goto 203

state 130
	xparam_list :  param_    (23)

	.  reduce 23


state 131
	stmt :  assign EOST_    (124)

	.  reduce 124


state 132
	stmt :  cmdlist EOST_    (125)

	.  reduce 125


state 133
	stmt :  immed EOST_    (126)

	.  reduce 126


state 134
	stmt :  inspect EOST_    (127)

	.  reduce 127


state 135
	stmt :  osesc EOST_    (128)

	.  reduce 128


state 136
	stmt :  popstk EOST_    (129)

	.  reduce 129


state 137
	stmt :  next EOST_    (139)

	.  reduce 139


state 138
	stmt :  break EOST_    (140)

	.  reduce 140


state 139
	stmt :  goto EOST_    (141)

	.  reduce 141


state 140
	stmt :  return EOST_    (142)

	.  reduce 142


state 141
	c_stmt :  c_blk NL_    (146)

	.  reduce 146


state 142
	assign :  ref equals_expr0 
	assign :  ref equals_ref 
	inspect :  ref equals_    (194)

	Y_SCAN  shift 157
	Y_SCANF  shift 158
	Y_FSCAN  shift 159
	Y_FSCANF  shift 160
	Y_CONSTANT  shift 148
	Y_IDENT  shift 162
	Y_INT  shift 164
	Y_REAL  shift 165
	Y_GCUR  shift 149
	Y_IMCUR  shift 150
	Y_UKEY  shift 151
	Y_PSET  shift 152
	-  shift 156
	YOP_NOT  shift 155
	(  shift 65
	.  reduce 194

	param  goto 108
	LP  goto 153
	expr  goto 154
	expr0  goto 204
	ref  goto 205
	expr1  goto 147
	intrinsx  goto 161
	intrins  goto 163

state 143
	assign :  ref $$154_assign_oper expr 

	YOP_AOADD  shift 207
	YOP_AOSUB  shift 208
	YOP_AOMUL  shift 209
	YOP_AODIV  shift 210
	YOP_AOCAT  shift 211
	.  error

	assign_oper  goto 206

state 144
	cmdlist :  command $$162_cmdpipe 
	cmdpipe : _    (164)

	.  reduce 164

	cmdpipe  goto 212

state 145
	expr :  expr0_    (77)
	immed :  equals expr0_    (192)

	Y_NEWLINE  reduce 192
	;  reduce 192
	.  reduce 77


state 146
	expr :  ref_    (78)
	immed :  equals ref_    (193)

	Y_NEWLINE  reduce 193
	;  reduce 193
	.  reduce 78


state 147
	expr0 :  expr1_    (79)

	.  reduce 79


state 148
	expr0 :  Y_CONSTANT_    (80)

	.  reduce 80


state 149
	expr0 :  Y_GCUR_    (81)

	.  reduce 81


state 150
	expr0 :  Y_IMCUR_    (82)

	.  reduce 82


state 151
	expr0 :  Y_UKEY_    (83)

	.  reduce 83


state 152
	expr0 :  Y_PSET_    (84)

	.  reduce 84


state 153
	expr1 :  LP_expr RP 

	Y_SCAN  shift 157
	Y_SCANF  shift 158
	Y_FSCAN  shift 159
	Y_FSCANF  shift 160
	Y_CONSTANT  shift 148
	Y_IDENT  shift 162
	Y_INT  shift 164
	Y_REAL  shift 165
	Y_GCUR  shift 149
	Y_IMCUR  shift 150
	Y_UKEY  shift 151
	Y_PSET  shift 152
	-  shift 156
	YOP_NOT  shift 155
	(  shift 65
	.  error

	param  goto 108
	LP  goto 153
	expr  goto 213
	expr0  goto 175
	ref  goto 176
	expr1  goto 147
	intrinsx  goto 161
	intrins  goto 163

state 154
	expr1 :  expr_+ opnl expr 
	expr1 :  expr_- opnl expr 
	expr1 :  expr_* opnl expr 
	expr1 :  expr_/ opnl expr 
	expr1 :  expr_YOP_POW opnl expr 
	expr1 :  expr_% opnl expr 
	expr1 :  expr_YOP_CONCAT opnl expr 
	expr1 :  expr_< opnl expr 
	expr1 :  expr_> opnl expr 
	expr1 :  expr_YOP_LE opnl expr 
	expr1 :  expr_YOP_GE opnl expr 
	expr1 :  expr_YOP_EQ opnl expr 
	expr1 :  expr_YOP_NE opnl expr 
	expr1 :  expr_YOP_OR opnl expr 
	expr1 :  expr_YOP_AND opnl expr 

	YOP_OR  shift 227
	YOP_AND  shift 228
	YOP_EQ  shift 225
	YOP_NE  shift 226
	<  shift 221
	>  shift 222
	YOP_LE  shift 223
	YOP_GE  shift 224
	YOP_CONCAT  shift 220
	+  shift 214
	-  shift 215
	*  shift 216
	/  shift 217
	%  shift 219
	YOP_POW  shift 218
	.  error


state 155
	expr1 :  YOP_NOT_expr 

	Y_SCAN  shift 157
	Y_SCANF  shift 158
	Y_FSCAN  shift 159
	Y_FSCANF  shift 160
	Y_CONSTANT  shift 148
	Y_IDENT  shift 162
	Y_INT  shift 164
	Y_REAL  shift 165
	Y_GCUR  shift 149
	Y_IMCUR  shift 150
	Y_UKEY  shift 151
	Y_PSET  shift 152
	-  shift 156
	YOP_NOT  shift 155
	(  shift 65
	.  error

	param  goto 108
	LP  goto 153
	expr  goto 229
	expr0  goto 175
	ref  goto 176
	expr1  goto 147
	intrinsx  goto 161
	intrins  goto 163

state 156
	expr1 :  -_expr 

	Y_SCAN  shift 157
	Y_SCANF  shift 158
	Y_FSCAN  shift 159
	Y_FSCANF  shift 160
	Y_CONSTANT  shift 148
	Y_IDENT  shift 162
	Y_INT  shift 164
	Y_REAL  shift 165
	Y_GCUR  shift 149
	Y_IMCUR  shift 150
	Y_UKEY  shift 151
	Y_PSET  shift 152
	-  shift 156
	YOP_NOT  shift 155
	(  shift 65
	.  error

	param  goto 108
	LP  goto 153
	expr  goto 230
	expr0  goto 175
	ref  goto 176
	expr1  goto 147
	intrinsx  goto 161
	intrins  goto 163

state 157
	expr1 :  Y_SCAN_LP $$103 scanarg RP 

	(  shift 65
	.  error

	LP  goto 231

state 158
	expr1 :  Y_SCANF_LP $$105 scanfmt DELIM scanarg RP 

	(  shift 65
	.  error

	LP  goto 232

state 159
	expr1 :  Y_FSCAN_LP $$107 scanarg RP 

	(  shift 65
	.  error

	LP  goto 233

state 160
	expr1 :  Y_FSCANF_LP Y_IDENT DELIM $$109 scanfmt DELIM scanarg RP 

	(  shift 65
	.  error

	LP  goto 234

state 161
	expr1 :  intrinsx_LP $$111 intrarg RP 

	(  shift 65
	.  error

	LP  goto 235

state 162
	intrins :  Y_IDENT_    (259)
	param :  Y_IDENT_    (260)

	(  reduce 259
	.  reduce 260


state 163
	intrinsx :  intrins_    (113)

	.  reduce 113


state 164
	intrinsx :  Y_INT_    (114)

	.  reduce 114


state 165
	intrinsx :  Y_REAL_    (115)

	.  reduce 115


state 166
	ifelse :  if_stat Y_ELSE_$$210 opnl xstmt 
	$$210 : _    (210)

	.  reduce 210

	$$210  goto 236

state 167
	iferr_else :  iferr_stat Y_ELSE_$$201 opnl xstmt 
	$$201 : _    (201)

	.  reduce 201

	$$201  goto 237

state 168
	while :  Y_WHILE LP_$$212 expr RP $$213 opnl xstmt 
	$$212 : _    (212)

	.  reduce 212

	$$212  goto 238

state 169
	for :  Y_FOR LP_opnl xassign ; opnl $$215 xexpr ; opnl $$216 xassign RP opnl $$217 stmt 
	opnl : _    (247)

	Y_NEWLINE  shift 12
	.  reduce 247

	NL  goto 62
	opnl  goto 239

state 170
	switch :  Y_SWITCH opnl_LP opnl expr opnl RP opnl $$223 xstmt 

	(  shift 65
	.  error

	LP  goto 240

state 171
	case :  Y_CASE $$225_const_expr_list : opnl $$226 xstmt 

	Y_CONSTANT  shift 244
	+  shift 196
	-  shift 197
	.  error

	const  goto 243
	number  goto 194
	sign  goto 195
	const_expr_list  goto 241
	const_expr  goto 242

state 172
	default :  Y_DEFAULT :_opnl $$228 xstmt 
	opnl : _    (247)

	Y_NEWLINE  shift 12
	.  reduce 247

	NL  goto 62
	opnl  goto 245

state 173
	goto :  Y_GOTO Y_IDENT_    (237)

	.  reduce 237


state 174
	expr1 :  expr_+ opnl expr 
	expr1 :  expr_- opnl expr 
	expr1 :  expr_* opnl expr 
	expr1 :  expr_/ opnl expr 
	expr1 :  expr_YOP_POW opnl expr 
	expr1 :  expr_% opnl expr 
	expr1 :  expr_YOP_CONCAT opnl expr 
	expr1 :  expr_< opnl expr 
	expr1 :  expr_> opnl expr 
	expr1 :  expr_YOP_LE opnl expr 
	expr1 :  expr_YOP_GE opnl expr 
	expr1 :  expr_YOP_EQ opnl expr 
	expr1 :  expr_YOP_NE opnl expr 
	expr1 :  expr_YOP_OR opnl expr 
	expr1 :  expr_YOP_AND opnl expr 
	return :  Y_RETURN expr_    (233)

	YOP_OR  shift 227
	YOP_AND  shift 228
	YOP_EQ  shift 225
	YOP_NE  shift 226
	<  shift 221
	>  shift 222
	YOP_LE  shift 223
	YOP_GE  shift 224
	YOP_CONCAT  shift 220
	+  shift 214
	-  shift 215
	*  shift 216
	/  shift 217
	%  shift 219
	YOP_POW  shift 218
	.  reduce 233


state 175
	expr :  expr0_    (77)

	.  reduce 77


state 176
	expr :  ref_    (78)

	.  reduce 78


state 177
	label_stmt :  Y_IDENT :_opnl $$235 xstmt 
	opnl : _    (247)

	Y_NEWLINE  shift 12
	.  reduce 247

	NL  goto 62
	opnl  goto 246

state 178
	nullstmt :  ; NL_    (239)

	.  reduce 239


state 179
	c_blk :  { $$147_s_list opnl $$148 } 
	s_list : _    (150)

	.  reduce 150

	s_list  goto 247

state 180
	ref :  param $$250_[ index_list ] 

	[  shift 248
	.  error

